--- a/provas.tex
+++ b/provas.tex
@@ -137,4 +137,35 @@ T(f(x)) = (x-1) f^{\prime}(x)
 \task[\pers{a}] Encontre o polinômio característico e o polinômio minimal de $T.$
 \task[\pers{b}] $T$ é diagonalizável? Em caso afirmativo, apresente uma base de autovetores para $V.$
 }
+\solucao{
+\dividiritens{
+\task[\pers{a}] Considere a base canônica $B = \{1, x, x^2, x^3 \}$ de $V.$ Vamos encontrar a matriz que representa $T$ nessa base. Para tanto, note que
+\[
+T(1) = (x-1)(1)^{\prime} = 0, \quad T(x) = (x-1)(x)^{\prime} = x-1,
+\]
+\[
+T(x^2) = (x-1)(x^2)^{\prime} = 2x^2 - 2x, \quad T(x^3) = (x-1)(x^3)^{\prime} = 3x^3 - 3x^2.
+\]
+Logo,
+\[
+[T]_B = \begin{pmatrix}
+0  & 0 & 0 & 0 \\
+-1 & 1 & 0 & 0 \\
+0 & -2 & 2 & 0 \\
+0 & 0 & -3 & 3
+\end{pmatrix}
+\]
+
+
+\task[\pers{b}]
+}
+
+}
+
+\section{\textcolor{Floresta}{Prova 2}}
+
+\begin{exercicio}
+ 
+\end{exercicio}
+\solucao{}
  \end{document}
