--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -36,7 +36,8 @@
 \setlength{\parindent}{0pt}
 \newcommand{\Nil}{\mathrm{Nil }}
 \newcommand{\tr}{\mathrm{tr }}
-
+\newcommand{\Hom}{\mathrm{Hom }}
+\newcommand{\End}{\mathrm{End }}
 \usepackage[framemethod=TikZ]{mdframed}
 \usepackage{lipsum}
 
